fixed alignment

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-end;
   width: 100%;
   margin: 34px auto 0;
   max-width: 984px;
